# lifetree

./: .gitignore  BENCHMARK_RESULTS.md  CMakeLists.txt  PHASE1.md  README.md  TEST_RESULTS.md
benchmarks/: lifetree_bench.cpp
include/: dependency_tree.h  lifetree.h
src/: demo.cpp  dependency_tree.cpp  lifetree.cpp  main.cpp  runtime_plugin_example.cpp
tests/: lifetree_stress_tests.cpp  lifetree_tests.cpp  test_dependency_tree.cpp
